force-app/main/default/objects/Org_Setting__mdt/fields/Bcc_Sender__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bcc Sender</label>
    <type>Checkbox</type>
</CustomField>