force-app/main/default/objects/Org_Setting__mdt/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <label>Html Body</label>
    <length>128</length>
    <type>Text</type>
</CustomField>