force-app/main/default/objects/Org_Setting__mdt/fields/Plain_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Body__c</fullName>
    <label>Plain Text Body</label>
    <length>128</length>
    <type>Text</type>
</CustomField>