force-app/main/default/objects/Org_Setting__mdt/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <label>Reply To</label>
    <length>128</length>
    <type>Text</type>
</CustomField>