force-app/main/default/objects/Org_Setting__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>