force-app/main/default/objects/Org_Setting__mdt/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <defaultValue></defaultValue>
    <label>To Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>