force-app/main/default/objects/Org_Setting__mdt/fields/Use_Signature__c.field-meta.xml
<CustomField>
    <fullName>Use_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Signature</label>
    <type>Checkbox</type>
</CustomField>