force-app/main/default/objects/Org_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Value</label>
    <type>Checkbox</type>
</CustomField>